--- a/package.json
+++ b/package.json
@@ -1,21 +1,17 @@
 {
-  "name": "cluyq",
-  "version": "0.0.0",
-  "description": "React example starter project",
-  "keywords": [
-    "react",
-    "starter"
-  ],
+  "name": "face-detection-1",
+  "version": "1.0.0",
+  "description": "",
+  "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-scripts": "4.0.0"
+    "face-api.js": "0.22.1",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-scripts": "3.0.1"
   },
   "devDependencies": {
-    "react-scripts": "1.0.0",
-    "@babel/runtime": "7.13.8",
-    "typescript": "4.1.3"
+    "typescript": "3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
